_/deployments/c35-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c35-server
  namespace: c35
  labels:
    app.kubernetes.io/name: c35-server
    app.kubernetes.io/part-of: c35
spec:
  selector:
    app.kubernetes.io/name: c35-server
  ports:
    - name: http
      port: 8080
      targetPort: http
